# MirrorSentinel

./: .gitignore  ARCHITECTURE_REPORT_CN.md  BENCHMARK_REPORT_CN.md  DATASET_AND_LARGE_FILES.md  OPEN_SOURCE_CHECKLIST_CN.md  README.md  ROBIO_TODO_CN.md  SLAM_EVAL_PROTOCOL_CN.md
Sentinal-LIO_ws/: .gitignore  ROS2_PORT.md
Sentinal-LIO_ws/src/fast_foundation_stereo_ros/: CMakeLists.txt  package.xml
Sentinal-LIO_ws/src/fast_foundation_stereo_ros/scripts/: build_trt.py  da3_adapter.py  da3_depth_node.py  export_reflection_seg_onnx.py  mask_prior_utils.py  run_reflection_seg_infer.py  train_reflection_seg_3dref.py  vfm_stereo_node.py  vfm_stereo_node_wrapper.sh
Sentinal-LIO_ws/src/mirrorsentinel_visual_prior/: CMakeLists.txt  package.xml
Sentinal-LIO_ws/src/mirrorsentinel_visual_prior/scripts/: da3_adapter.py  mask_prior_node.py  reflection_mask_node.py  reflection_seg_model.py
Sentinal-LIO_ws/src/sentinel_lio/: CMakeLists.txt  README.md  package.xml
Sentinal-LIO_ws/src/sentinel_lio/config/: sentinel_ouster.yaml
Sentinal-LIO_ws/src/sentinel_lio/include/: MirrorSentinel.hpp  common_lib.h  ros2_compat.hpp
Sentinal-LIO_ws/src/sentinel_lio/launch/: run_sentinel_ouster.launch.py
Sentinal-LIO_ws/src/sentinel_lio/rviz_cfg/: loam_livox.rviz  sentinel_mapping.rviz
Sentinal-LIO_ws/src/sentinel_lio/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
dataset/: README_DATASETS_CN.md  download_3dref.sh
docs/: MIRROR_SLAM_RESEARCH_REVIEW_CN.md  REFLECTION_SLAM_BASELINES_CN.md  ROBIO_PAPER_DRAFT_CN.md  TEAM_HANDOFF_CN.md  reflection_slam_stitching_protocol.md
evaluation_tools/: EXPERIMENT_DEPLOYMENT_CN.md  FRAME_PRIOR_BACKEND_CN.md  README.md  annotation_helper.py  apply_frame_prior_vote_threshold.py  batch_reflection_eval.py  batch_tum_eval.py  detect_reflective_planes.py  diagnose_frame_prior_votes.py  eval_fast_livo_export.py  extract_bag_images.py  filter_map_by_anchor_segments.py  filter_map_by_frame_prior_votes.py  filter_map_by_markers.py  filter_room_bounds_ghosts.py  generate_mask_prior.py  import_recovered_lio_sam.py  map_ghost_eval.py  mirror_segmentation_eval.py  mirrorsentinel_clean_map.py  mirrorsentinel_detect_planes.py  mirrorsentinel_replay_votes.py  mirrorsentinel_run_pipeline.py  no_gt_trajectory_eval.py  normalize_map_budget.py  reference_map_eval.py  reflection_removal_eval.py  rescue_rosbag1_to_ros2.py  room_gt_annotator.py  ros2_bag_pointcloud_to_pcd.py  ros2_bag_to_tum.py  ros2_bag_topic_rate.py  ros2_pointcloud_dense_flag.py  rosbag_to_tum.py  rtabmap_make_zed_stereo_calib.py  run_lio_sam_self_collected.sh  run_ros2_slam_eval.py  run_rtabmap_self_collected.sh  summarize_3dref_baselines.py  summarize_budget_100k.py  (+4 more)
evaluation_tools/baselines/: run_eblnet_3dref_infer.py  run_satnet_3dref_infer.py
evaluation_tools/configs/: benchmark_plan.yaml  lio_sam_self_collected.yaml
evaluation_tools/data/annotations/self_collected/: 2026-03-30-21-31-03_rescued.polygon_slab_backup.yaml  2026-03-30-21-31-03_rescued.room_bounds_before_faces.yaml  2026-03-30-21-31-03_rescued.yaml
evaluation_tools/data/gt_reference/self_collected/2026-03-30-21-31-03_rescued/: room_gt_annotation.yaml  room_gt_face_labels.npy  room_gt_mesh.ply  room_gt_reference.pcd  room_gt_summary.json
evaluation_tools/launch/: lio_sam_self_collected.launch.py  rtabmap_self_collected_min.launch.py
evaluation_tools/pcl_room_annotator/: CMakeLists.txt  build.sh  run.sh
evaluation_tools/pcl_room_annotator/src/: pcl_room_annotator.cpp
evaluation_tools/reconstruction/: README.md  apply_neuralrecon_prior_to_map.py  build_torchsparse_local.sh  download_neuralrecon_checkpoint.sh  export_prior_filter_quicklook.py  inspect_neuralrecon_result.py  neuralrecon_env.sh  prepare_neuralrecon_demo.py  run_mast3r_slam_baseline.py  run_neuralrecon_demo.py  run_neuralrecon_prior_filter.sh  run_neuralrecon_rescued.sh  run_slam3r_baseline.py  setup_neuralrecon_env.sh
scripts/: build_ros2.sh  download_baselines.sh  find_mirrorsentinel_assets.sh  mirrorsentinel_play_bag.sh  mirrorsentinel_rviz.sh  setup_depth_anything3_env.sh
