<?xml version="1.0"?>
<package format="3">
  <name>fast_foundation_stereo_ros</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for Fast-FoundationStereo TensorRT depth publishing.</description>
  <maintainer email="12312820@mail.susyech.edu.cn">Yugong Wang</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
